<resources>
    <string name="app_name">ALC 4 Phase 1</string>
    <string name="welcome_to_alc_4_0">Welcome to ALC 4.0</string>
    <string name="about_alc">About ALC</string>
    <string name="my_profile">My Profile</string>
    <string name="profile_pic">profile pic</string>
    <string name="owoleke_babatunde">Owoleke Babatunde</string>
    <string name="track_android">Track:  Android</string>
    <string name="country_nigeria">Country:  Nigeria</string>
    <string name="email_tundeowoleeke1_gmail_com">Email:    tundeowoleke1@gmail.com</string>
    <string name="phone_number_08035909842">Phone Number:   08035909842</string>
    <string name="slack_username_t2dbabz">Slack Username:   t2dbabz</string>
</resources>
